Cabal-Version: >= 1.2
Name:            quid2-util
Version:         0.2
Stability:       alpha
Synopsis:        Utilities
License:         BSD3
Copyright:       (c) 2014 Pasqualino 'Titto' Assini (tittoassini@gmail.com)
Author:          Pasqualino 'Titto' Assini (tittoassini@gmail.com)
Maintainer:      Pasqualino 'Titto' Assini (tittoassini@gmail.com)
Homepage:        http://quid2.org
Build-Type:      Simple

Library
  Hs-Source-Dirs:  src
  Extensions:           CPP
  Build-Depends:   HaskellNet
                 , HaskellNet-SSL
                 , MissingH
                 , base
                 , bytestring
                 , conduit-extra
                 , connection>=0.2.1
                 , containers
                 , deepseq
                 , directory
                 , enclosed-exceptions >= 1.0.1
                 , extensible-exceptions
                 , filepath
                 , hslogger
                 , hsyslog>=2
                 , http-conduit >= 1.9.0
                 , http-types >=0.6.11
                 , mime-mail
                 , monads-tf
                 , network >= 2.4
                 , old-locale
                 , old-time
                 , process
                 , propellor == 0.7.0.11
                 , scotty>=0.7.2
                 , smtps-gmail >= 1.3.2
                 , text
                 , time
                 , tls
                   -- < 1.3
                 , transformers
                 , unix
                 , utf8-string >= 0.3.7
  Exposed-Modules: Quid2.Util.Strict ,Quid2.Util.String ,Quid2.Util.Time ,Quid2.Util.HTTP ,Quid2.Util.Voice ,Quid2.Util.Email ,Quid2.Util.PrivData ,Quid2.Util.Dir ,Quid2.Util.Service ,System.Posix.Daemonize
